@@ -11,22 +11,22 @@
 #
 # Action,Ref,Oper,Hd:Md:Sd,Oper,Hf:Mf:Sf,Interval,Aperture,ISO,ShutterSpeed,MLUDelay
 #
-# Action = Boucle (suite de photo identiques) ou Photo (photo unique)       | Ref = Indique le point de référence, mettre un "-" si en mode absolu
-# Oper = Ajoute ou soustrait l'heure à la Ref                               | Hd Md Sd = Heure:Minute:Seconde de début de la boucle ou de la Photo
-# Hf Mf Sf = Heure:Minute:Seconde de fin de la boucle                       | Interval = Délais en seconde entre 2 photo dans un boucle
-# Aperture = Ouverture, choisir des valeurs compatibles avec le boitier     | ISO = Sensibilité, choisir des valeurs compatibles avec le boitier
-# ShutterSpeed = Vitesse d'obturation en seconde                            | MLUDelay = Temps d'attente une fois le mirroir relevé en seconde    
+# Action = Boucle ou Interval (suite de photo identiques), ou Photo (photo unique)  | Ref = Indique le point de référence, mettre un "-" si en mode absolu
+# Oper = Ajoute ou soustrait l'heure à la Ref                                       | Hd Md Sd = Heure:Minute:Seconde de début de la boucle ou de la Photo
+# Hf Mf Sf = Heure:Minute:Seconde de fin de la boucle                               | Interval = Délais en seconde entre 2 photo dans un boucle
+# Aperture = Ouverture, choisir des valeurs compatibles avec le boitier             | ISO = Sensibilité, choisir des valeurs compatibles avec le boitier
+# ShutterSpeed = Vitesse d'obturation en seconde                                    | MLUDelay = Temps d'attente une fois le mirroir relevé en seconde    
 #
 # Exemples
 Config,20:20:30,20:25:05,20:26:15,20:27:55,20:30:03,1
 Boucle,C1,-,00:02:00,+,00:00:30,20,8,800,0.0005,500
-Boucle,C2,-,00:01:00,+,00:00:30,10,8,200,0.0005,0
+Interval,C2,-,00:01:00,+,00:00:30,50,8,200,0.0005,0
 #
 Photo,Max,-,00:00:10,-,-,-,-,-,4,1600,1,500
 Photo,Max,-,00:00:05,-,-,-,-,-,4,1600,1,500
 Photo,Max,+,00:00:05,-,-,-,-,-,4,1600,1,500
 Photo,Max,+,00:00:10,-,-,-,-,-,4,1600,2,500
 #
-Boucle,C3,-,00:00:30,+,00:01:00,10,8,800,0.0005,500
+Interval,C3,-,00:00:30,+,00:01:00,50,8,800,0.0005,500
 Boucle,C4,-,00:00:30,+,00:02:00,1,8,200,0.0005,0
 #
